--- a/src/index.css
+++ b/src/index.css
@@ -615,7 +615,7 @@ a.link-phones:hover {
     
 .text-indent img {
   /* width: 290px !important; */
-  max-width: 100%;
+  max-width: 390px;
   height: 80% !important;
   text-align: center;
   margin: auto;
@@ -1042,6 +1042,29 @@ a.link-activated:hover,
 
 
 /* START MEDIA QUERIES */
+/*Estilo para celulares*/
+@media only screen and (max-width: 600px) {
+  
+
+}
+/*Estilo para Tablets*/
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+
+}
+
+/*Estilo para PC*/
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+
+
+}
+
+/*PARA PANTALLAS MAS GRANDES*/
+@media only screen and (min-width: 1441px) {
+  
+
+
+
+
 /* @media screen and (min-width:568px) {}
 
 
@@ -1086,7 +1109,7 @@ h6.btn-square-text {
 
 
 /* START MEDIA QUERIES */
-/* @media screen and (min-width:300px) and (max-width:576px){ */
+
 
 /* .btn-toolbar{
     width: 87%;
