--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ a {
 .main-div-header {
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: center;
   background-color: #c1cdd6;
   border-color: #315C94;
@@ -260,7 +260,7 @@ a {
 /*START HOME*/
 
 .container, .container-lg, .container-md, .container-sm, .container-xl{
-  max-width: 1450px;
+  max-width: 100%;
 }
 
 .banner-home {
@@ -582,7 +582,7 @@ a.link-phones:hover {
 
 
 .container-pages {
-  margin: 25px 0 0 0;
+  margin: 90px 0 0 12px;
   padding: 0px;
 }
 
@@ -1066,7 +1066,7 @@ a.link-activated:hover,
     background-color: #e5e5e6;
     padding: 25px 0px 25px 0px;
     margin-bottom: 25px;
-    max-width: 1350px;
+    max-width: 1550px;
   }
   /*end HOME*/
 
