--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ a {
 .main-div-header {
   display: flex;
   width: 100%;
-  /* justify-content: space-around; */
+  /* justify-content: space-around; */ */
   align-items: center;
   background-color: #c1cdd6;
   border-color: #315C94;
@@ -66,6 +66,7 @@ a {
   border-width: thick;
   position: fixed;
   z-index: 10000;
+  flex-direction: column;
 }
 
 .logo-header {
@@ -247,6 +248,10 @@ a {
 
 .navbar-collapse-hamburguer.open {
   display: block;
+}
+
+.navbar-collapse{
+  max-height: 1300px;
 }
 
 .nav-link-header.open {
