header css changed

--- a/src/index.css
+++ b/src/index.css
@@ -70,8 +70,8 @@ a {
 }
 
 .logo-header {
-  width: 140px;
-  height: 75px;
+  width: 200px;
+  height: 100px;
 }
 
 .main-div-header i.fa-user {
@@ -257,12 +257,20 @@ a {
 .nav-link-header.open {
   display: block;
 }
+.nav-css{
+  width: 300px;
+}
 
+.navbarScroll-css {
+  align-items:"baseline";
+  justify-content:"space-around";
+  font-size:"25px";
+}
 /* btn-hamburguer */
 
-/* END HEADER */
+/*************************************** END HEADER************************************************** */
 
-/*START HOME*/
+/***************************************START HOME******************************************************/
 
 .container, .container-lg, .container-md, .container-sm, .container-xl{
   max-width: 100%;
@@ -410,7 +418,7 @@ a.link-phones:hover {
   font-weight: 400;
 }
 
-/* END FOOTER */
+/************************ END FOOTER *******************************************************************/
 
 /*********************** START NEWS *******************************************************************/
 
@@ -1069,7 +1077,15 @@ a.link-activated:hover,
 /* START MEDIA QUERIES */
 
 /*Estilo para Tablets*/
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 601px) and (max-width: 991px) {
+  /**HEADER*****/
+
+  .nav-css{
+    width: 600px;
+  }
+
+
+
   /*HOME*/
 
   .formalities-bg{
@@ -1116,7 +1132,16 @@ a.link-phones{
 }
 
 /*Estilo para PC*/
-@media only screen and (min-width: 1025px)  {
+@media only screen and (min-width: 992px) and (max-width: 1200px)  {
+
+  /***********************************************HEADER********************************************/
+  .navbar-expand-lg{
+    width: 992px;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+
+
 
 /*Start Home*/
  
@@ -1158,7 +1183,55 @@ font-size: 18px;
 
 }
 
+@media only screen and (min-width:1201px)   {
 
+  /***********************************************HEADER********************************************/
+  .navbar-expand-lg{
+    width: 1200px;
+    align-items: baseline;
+  }
+
+
+
+/*Start Home*/
+ 
+
+
+/* end Home*/
+
+/*Footer */
+.list-section {
+  font-size: 16px;
+  margin: center;
+}
+.menu-subtitle{
+  font-size: 16px;
+  padding:5px;
+}
+
+.title-copyright {
+margin: 0;
+font-size: 15px;
+font-weight: 400;
+}
+a.link-phones{
+flex:0%;
+font-size: 18px;
+}
+.section-contact-follow {
+  justify-content: space-evenly;
+  }
+
+.phones {
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+}
+.number-phone, .title-phone {
+  font-size: 15px;
+}
+/*Footer*/
+
+}
   
 
 
