--- a/src/index.css
+++ b/src/index.css
@@ -782,7 +782,7 @@ a.link-activated:hover,
   height: 300px;
   border-radius: 5px 5px 0 0;
   margin-bottom: 15px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .social-net-card {
@@ -1032,6 +1032,14 @@ a.link-activated:hover,
 
 
 /*****************************************************  START FORM DIGITAL POINT **********************/
+
+.banner-punto-digital {
+  width: 100%;
+  margin-bottom: 40px;
+  /* margin-top: 30px; */
+  height: 450px;
+  object-fit: scale-down;
+}
 
 .preview-image-dp {
   background-color: #ffffff;
