--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,11 @@ a {
 }
 
 .user-name-navbar {
-  font-size: 0.55em;
-  margin: 0px 0px -10px 0px;
+  font-size: 0.75em;
+  margin: 0px 0px 5px 0px;
+  display: flex;
+  align-items: center;
+  padding-left: 0px !important;
 }
 
 .avatar-in-navbar {
@@ -101,7 +104,7 @@ a {
   color: #315c94;
   border-color: #315c94;
   border-style: solid;
-  /* box-shadow: 0px 0px 4px rgba(49, 92, 148, 0.4); */
+  box-shadow: 0px 0px 4px rgba(49, 92, 148, 0.4);
   border-radius: 50%;
 }
 
@@ -242,6 +245,8 @@ a {
   background-color: transparent;
   border: none;
   font-weight: 600;
+  padding-left: 0px !important;
+
 }
 
 .button-logout:hover {
@@ -264,9 +269,10 @@ a {
 }
 
 .navbarScroll-css {
-  align-items:"baseline";
+  display: flex;
   justify-content:"space-around";
   font-size:"25px";
+
 }
 /* btn-hamburguer */
 
