--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,11 @@ a {
   border-radius: 50%;
 }
 
+.dropdown-toggle::after {
+  display: none;
+}
+
+
 /* btn-hamburguer */
 
 .navbar-hamburguer {
